# ProgPractice

./: CMakeLists.txt
practice1/: CMakeLists.txt  figure.cpp  main.cpp
practice2/: CMakeLists.txt  main.cpp
